--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#26c6da</color>
+    <color name="colorPrimaryLight">#6ff9ff</color>
+    <color name="colorPrimaryDark">#0095a8</color>
+    <color name="colorSecondary">#4caf50</color>
+    <color name="colorSecondaryLight">#80e27e</color>
+    <color name="colorSecondaryDark">#087f23</color>
+    <color name="colorAccent">#c63f17</color>
+    <color name="colorLight">#eeeeee</color>
+    <color name="colorShadowed">#888888</color>
+    <color name="colorDark">#111111</color>
 </resources>
