--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#26c6da</color>
-    <color name="colorPrimaryLight">#6ff9ff</color>
-    <color name="colorPrimaryDark">#0095a8</color>
-    <color name="colorSecondary">#4caf50</color>
-    <color name="colorSecondaryLight">#80e27e</color>
-    <color name="colorSecondaryDark">#087f23</color>
-    <color name="colorAccent">#c63f17</color>
+    <color name="colorPrimary">#c5cae9</color>
+    <color name="colorPrimaryLight">#f8fdff</color>
+    <color name="colorPrimaryDark">#9499b7</color>
+    <color name="colorSecondary">#b2dfdb</color>
+    <color name="colorSecondaryLight">#e5ffff</color>
+    <color name="colorSecondaryDark">#82ada9</color>
+    <color name="colorAccent">#ef5350</color>
     <color name="colorLight">#eeeeee</color>
     <color name="colorShadowed">#888888</color>
     <color name="colorDark">#111111</color>
