--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,19 @@
     <style name="button_digit">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_digit</item>
+    </style>
+
+    <style name="button_digit_land">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
@@ -26,15 +39,22 @@
         <item name="android:background">@drawable/button_digit</item>
     </style>
     
-    <style name="button_container">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">24dp</item>
-    </style>
-    
     <style name="button_operator">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_operator</item>
+    </style>
+
+    <style name="button_operator_land">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
@@ -46,6 +66,19 @@
     <style name="button_equals">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_equals</item>
+    </style>
+
+    <style name="button_equals_land">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
@@ -57,6 +90,20 @@
     <style name="button_reset">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_reset</item>
+
+    </style>
+
+    <style name="button_reset_land">
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_marginTop">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
