--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,20 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSecondaryLight"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:background="@drawable/background"
+    android:padding="@dimen/window_padding">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_settings"
+        style="@style/button_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="128dp"
-        android:layout_marginEnd="128dp">
+        android:layout_marginStart="@dimen/calculator_margin"
+        android:layout_marginEnd="@dimen/calculator_margin">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/screen_container"
             style="@style/screen"
+            android:background="@color/colorShadowed"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +29,7 @@
             app:layout_constraintBottom_toTopOf="@id/buttons_container">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/background"
-                android:scaleType="centerCrop"
+                style="@style/screen_image"
                 android:contentDescription="@string/screen_description"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -35,12 +38,7 @@
 
             <TextView
                 android:id="@+id/screen_operator"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorDark"
+                style="@style/screen_operator"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/screens"
@@ -57,12 +55,7 @@
 
                 <TextView
                     android:id="@+id/screen_helper"
-                    android:layout_width="0dp"
-                    android:layout_height="16dp"
-                    android:gravity="center_vertical|end"
-                    android:paddingEnd="16dp"
-                    android:textSize="12sp"
-                    android:textColor="@color/colorDark"
+                    style="@style/screen_helper"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -70,13 +63,7 @@
 
                 <TextView
                     android:id="@+id/screen_main"
-                    android:layout_width="0dp"
-                    android:layout_height="32dp"
-                    android:gravity="center_vertical|end"
-                    android:paddingEnd="16dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorDark"
+                    style="@style/screen_main"
                     app:layout_constraintTop_toBottomOf="@id/screen_helper"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -88,223 +75,223 @@
             android:id="@+id/buttons_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/buttons_margin_top"
             app:layout_constraintTop_toBottomOf="@id/screen_container"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
 
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_1"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/bt_2"
                 app:layout_constraintBottom_toTopOf="@id/bt_4"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_2"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/bt_1"
                 app:layout_constraintEnd_toStartOf="@id/bt_3"
                 app:layout_constraintBottom_toTopOf="@id/bt_5"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_3"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_3"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/bt_2"
                 app:layout_constraintEnd_toStartOf="@id/bt_plus"
                 app:layout_constraintBottom_toTopOf="@id/bt_6"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_plus"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_plus"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/bt_3"
                 app:layout_constraintEnd_toStartOf="@id/bt_minus"
                 app:layout_constraintBottom_toTopOf="@id/bt_multiply"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_minus"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_minus"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/bt_plus"
                 app:layout_constraintEnd_toStartOf="@id/bt_reset"
                 app:layout_constraintBottom_toTopOf="@id/bt_divide"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_reset"
-                style="@style/button_reset_land"
+                style="@style/button_reset"
                 android:text="@string/bt_reset"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/bt_minus"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/bt_back"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_4"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_4"
                 app:layout_constraintTop_toBottomOf="@id/bt_1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/bt_5"
                 app:layout_constraintBottom_toTopOf="@id/bt_7"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_5"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_5"
                 app:layout_constraintTop_toBottomOf="@id/bt_2"
                 app:layout_constraintStart_toEndOf="@id/bt_4"
                 app:layout_constraintEnd_toStartOf="@id/bt_6"
                 app:layout_constraintBottom_toTopOf="@id/bt_8"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_6"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_6"
                 app:layout_constraintTop_toBottomOf="@id/bt_3"
                 app:layout_constraintStart_toEndOf="@id/bt_5"
                 app:layout_constraintEnd_toStartOf="@id/bt_multiply"
                 app:layout_constraintBottom_toTopOf="@id/bt_9"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_multiply"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_multiply"
                 app:layout_constraintTop_toBottomOf="@id/bt_plus"
                 app:layout_constraintStart_toEndOf="@id/bt_6"
                 app:layout_constraintEnd_toStartOf="@id/bt_divide"
                 app:layout_constraintBottom_toTopOf="@id/bt_sin"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_divide"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_divide"
                 app:layout_constraintTop_toBottomOf="@id/bt_minus"
                 app:layout_constraintStart_toEndOf="@id/bt_multiply"
                 app:layout_constraintEnd_toStartOf="@id/bt_back"
                 app:layout_constraintBottom_toTopOf="@id/bt_cos"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_back"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_back"
                 app:layout_constraintTop_toBottomOf="@id/bt_reset"
                 app:layout_constraintStart_toEndOf="@id/bt_divide"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/bt_rnd"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_7"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_7"
                 app:layout_constraintTop_toBottomOf="@id/bt_4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/bt_8"
                 app:layout_constraintBottom_toTopOf="@id/bt_0"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_8"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_8"
                 app:layout_constraintTop_toBottomOf="@id/bt_5"
                 app:layout_constraintStart_toEndOf="@id/bt_7"
                 app:layout_constraintEnd_toStartOf="@id/bt_9"
                 app:layout_constraintBottom_toTopOf="@id/bt_dot"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_9"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_9"
                 app:layout_constraintTop_toBottomOf="@id/bt_6"
                 app:layout_constraintStart_toEndOf="@id/bt_8"
                 app:layout_constraintEnd_toStartOf="@id/bt_sin"
                 app:layout_constraintBottom_toTopOf="@id/bt_pi"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_sin"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_sin"
                 app:layout_constraintTop_toBottomOf="@id/bt_multiply"
                 app:layout_constraintStart_toEndOf="@id/bt_9"
                 app:layout_constraintEnd_toStartOf="@id/bt_cos"
                 app:layout_constraintBottom_toTopOf="@id/bt_sqrt"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_cos"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_cos"
                 app:layout_constraintTop_toBottomOf="@id/bt_divide"
                 app:layout_constraintStart_toEndOf="@id/bt_sin"
                 app:layout_constraintEnd_toStartOf="@id/bt_rnd"
                 app:layout_constraintBottom_toTopOf="@id/bt_percent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_rnd"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_rnd"
                 app:layout_constraintTop_toBottomOf="@id/bt_back"
                 app:layout_constraintStart_toEndOf="@id/bt_cos"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/bt_equals"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_0"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_0"
                 app:layout_constraintTop_toBottomOf="@id/bt_7"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/bt_dot"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_dot"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_dot"
                 app:layout_constraintTop_toBottomOf="@id/bt_8"
                 app:layout_constraintStart_toEndOf="@id/bt_0"
                 app:layout_constraintEnd_toStartOf="@id/bt_pi"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_pi"
-                style="@style/button_digit_land"
+                style="@style/button_digit"
                 android:text="@string/bt_pi"
                 app:layout_constraintTop_toBottomOf="@id/bt_9"
                 app:layout_constraintStart_toEndOf="@id/bt_dot"
                 app:layout_constraintEnd_toStartOf="@id/bt_sqrt"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_sqrt"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_sqrt"
                 app:layout_constraintTop_toBottomOf="@id/bt_sin"
                 app:layout_constraintStart_toEndOf="@id/bt_pi"
                 app:layout_constraintEnd_toStartOf="@id/bt_percent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_percent"
-                style="@style/button_operator_land"
+                style="@style/button_operator"
                 android:text="@string/bt_percent"
                 app:layout_constraintTop_toBottomOf="@id/bt_cos"
                 app:layout_constraintStart_toEndOf="@id/bt_sqrt"
                 app:layout_constraintEnd_toStartOf="@id/bt_equals"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <TextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/bt_equals"
-                style="@style/button_equals_land"
+                style="@style/button_equals"
                 android:text="@string/bt_equals"
                 app:layout_constraintTop_toBottomOf="@id/bt_rnd"
                 app:layout_constraintStart_toEndOf="@id/bt_percent"
