--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:background="@drawable/background"
+    android:padding="@dimen/window_padding">
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_settings"
+        style="@style/button_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/screen_container"
         style="@style/screen"
+        android:background="@color/colorShadowed"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,10 +26,7 @@
         app:layout_constraintBottom_toTopOf="@id/buttons_container">
         
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/background"
-            android:scaleType="centerCrop"
+            style="@style/screen_image"
             android:contentDescription="@string/screen_description"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,12 +35,7 @@
 
         <TextView
             android:id="@+id/screen_operator"
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorDark"
+            style="@style/screen_operator"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/screens"
@@ -51,12 +52,7 @@
 
             <TextView
                 android:id="@+id/screen_helper"
-                android:layout_width="0dp"
-                android:layout_height="16dp"
-                android:gravity="center_vertical|end"
-                android:paddingEnd="16dp"
-                android:textSize="12sp"
-                android:textColor="@color/colorDark"
+                style="@style/screen_helper"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,13 +60,7 @@
 
             <TextView
                 android:id="@+id/screen_main"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:gravity="center_vertical|end"
-                android:paddingEnd="16dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorDark"
+                style="@style/screen_main"
                 app:layout_constraintTop_toBottomOf="@id/screen_helper"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -82,14 +72,14 @@
         android:id="@+id/buttons_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/buttons_margin_top"
         app:layout_constraintTop_toBottomOf="@id/screen_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_1"
             style="@style/button_digit"
             android:text="@string/bt_1"
@@ -97,8 +87,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/bt_2"
             app:layout_constraintBottom_toTopOf="@id/bt_4"/>
-        
-        <TextView
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_2"
             style="@style/button_digit"
             android:text="@string/bt_2"
@@ -107,7 +97,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_3"
             app:layout_constraintBottom_toTopOf="@id/bt_5"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_3"
             style="@style/button_digit"
             android:text="@string/bt_3"
@@ -116,7 +106,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_plus"
             app:layout_constraintBottom_toTopOf="@id/bt_6"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_plus"
             style="@style/button_operator"
             android:text="@string/bt_plus"
@@ -125,7 +115,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_minus"
             app:layout_constraintBottom_toTopOf="@id/bt_multiply"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_minus"
             style="@style/button_operator"
             android:text="@string/bt_minus"
@@ -134,7 +124,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_reset"
             app:layout_constraintBottom_toTopOf="@id/bt_divide"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_reset"
             style="@style/button_reset"
             android:text="@string/bt_reset"
@@ -143,7 +133,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bt_back"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_4"
             style="@style/button_digit"
             android:text="@string/bt_4"
@@ -152,7 +142,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_5"
             app:layout_constraintBottom_toTopOf="@id/bt_7"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_5"
             style="@style/button_digit"
             android:text="@string/bt_5"
@@ -161,7 +151,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_6"
             app:layout_constraintBottom_toTopOf="@id/bt_8"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_6"
             style="@style/button_digit"
             android:text="@string/bt_6"
@@ -170,7 +160,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_multiply"
             app:layout_constraintBottom_toTopOf="@id/bt_9"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_multiply"
             style="@style/button_operator"
             android:text="@string/bt_multiply"
@@ -179,7 +169,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_divide"
             app:layout_constraintBottom_toTopOf="@id/bt_sin"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_divide"
             style="@style/button_operator"
             android:text="@string/bt_divide"
@@ -188,7 +178,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_back"
             app:layout_constraintBottom_toTopOf="@id/bt_cos"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_back"
             style="@style/button_operator"
             android:text="@string/bt_back"
@@ -197,7 +187,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bt_rnd"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_7"
             style="@style/button_digit"
             android:text="@string/bt_7"
@@ -206,7 +196,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_8"
             app:layout_constraintBottom_toTopOf="@id/bt_0"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_8"
             style="@style/button_digit"
             android:text="@string/bt_8"
@@ -215,7 +205,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_9"
             app:layout_constraintBottom_toTopOf="@id/bt_dot"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_9"
             style="@style/button_digit"
             android:text="@string/bt_9"
@@ -224,7 +214,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_sin"
             app:layout_constraintBottom_toTopOf="@id/bt_pi"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_sin"
             style="@style/button_operator"
             android:text="@string/bt_sin"
@@ -233,7 +223,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_cos"
             app:layout_constraintBottom_toTopOf="@id/bt_sqrt"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_cos"
             style="@style/button_operator"
             android:text="@string/bt_cos"
@@ -242,7 +232,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_rnd"
             app:layout_constraintBottom_toTopOf="@id/bt_percent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_rnd"
             style="@style/button_operator"
             android:text="@string/bt_rnd"
@@ -251,7 +241,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bt_equals"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_0"
             style="@style/button_digit"
             android:text="@string/bt_0"
@@ -260,7 +250,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_dot"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_dot"
             style="@style/button_digit"
             android:text="@string/bt_dot"
@@ -269,7 +259,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_pi"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_pi"
             style="@style/button_digit"
             android:text="@string/bt_pi"
@@ -278,7 +268,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_sqrt"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_sqrt"
             style="@style/button_operator"
             android:text="@string/bt_sqrt"
@@ -287,7 +277,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_percent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_percent"
             style="@style/button_operator"
             android:text="@string/bt_percent"
@@ -296,7 +286,7 @@
             app:layout_constraintEnd_toStartOf="@id/bt_equals"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_equals"
             style="@style/button_equals"
             android:text="@string/bt_equals"
