--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,115 +1,146 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppThemeLight" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    
+
+    <style name="AppThemeDark" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimaryLight</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccentLight</item>
+    </style>
+
     <style name="screen">
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">@dimen/element_size</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/screen</item>
     </style>
-    
-    <style name="button_digit">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">24dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/colorDark</item>
+
+    <style name="screen_main">
+        <item name="android:layout_height">@dimen/main_screen_height</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:gravity">center_vertical|end</item>
+        <item name="android:paddingStart">@dimen/screen_padding</item>
+        <item name="android:paddingEnd">@dimen/screen_padding</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_digit</item>
+        <item name="android:textColor">@color/colorDark</item>
     </style>
 
-    <style name="button_digit_land">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">12dp</item>
+    <style name="screen_operator">
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorDark</item>
+    </style>
+
+    <style name="screen_helper">
+        <item name="android:layout_height">@dimen/helper_screen_height</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center_vertical|end</item>
+        <item name="android:paddingStart">@dimen/screen_padding</item>
+        <item name="android:paddingEnd">@dimen/screen_padding</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">@color/colorDark</item>
+    </style>
+    
+    <style name="screen_image">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+    
+    <style name="button_digit">
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:layout_marginTop">@dimen/button_margin_top</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_digit</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
     </style>
     
     <style name="button_operator">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:layout_marginTop">@dimen/button_margin_top</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
+        <item name="android:padding">0dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_operator</item>
+        <item name="backgroundTint">@color/colorPrimaryDark</item>
     </style>
-
-    <style name="button_operator_land">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/colorDark</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_operator</item>
-    </style>
-
+    
     <style name="button_equals">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:layout_marginTop">@dimen/button_margin_top</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_equals</item>
+        <item name="backgroundTint">@color/colorSecondaryDark</item>
     </style>
-
-    <style name="button_equals_land">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/colorDark</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_equals</item>
-    </style>
-
+    
     <style name="button_reset">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:layout_marginTop">@dimen/button_margin_top</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_reset</item>
-
+        <item name="backgroundTint">@color/colorAccent</item>
+        <item name="android:padding">0dp</item>
     </style>
 
-    <style name="button_reset_land">
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_width">48dp</item>
-        <item name="android:layout_marginTop">12dp</item>
+    <style name="button_settings">
+        <item name="android:layout_height">@dimen/element_size</item>
+        <item name="android:layout_width">@dimen/element_size</item>
+        <item name="android:layout_marginBottom">@dimen/button_settings_margin</item>
+        <item name="android:layout_marginEnd">@dimen/button_settings_margin</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="android:background">@drawable/ic_settings_black_24dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/colorDark</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:background">@drawable/button_reset</item>
+        <item name="backgroundTint">@color/colorSecondaryLight</item>
+    </style>
 
+    <style name="switch_settings">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_margin">@dimen/button_settings_margin</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:switchPadding">12dp</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
+
+    <style name="button_ok">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/button_settings_margin</item>
+        <item name="android:layout_marginStart">@dimen/button_settings_margin</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="backgroundTint">@color/colorSecondaryDark</item>
     </style>
 </resources>
